Hosted on firebase

--- a/angular.json
+++ b/angular.json
@@ -116,6 +116,10 @@
               "devServerTarget": "tour-of-heros:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
